# pitchside_tracker

./: .gitignore  README  README.md
install/: local_setup.sh  setup.sh
install/pitchside_tracke/lib/pitchside_tracke/: tracker_node
install/pitchside_tracke/share/pitchside_tracke/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pitchside_tracker/lib/pitchside_tracker/: my_node  spawn_sideline  tracking_node
install/pitchside_tracker/share/pitchside_tracker/: package.bash  package.dsv  (+3 more)
log/: latest_build
src/: Dockerfile
src/pitchside_tracker/: Dockerfile  docker_build.sh  run_docker.sh  setup.cfg  setup.py
src/pitchside_tracker/config/: goal.yaml  one_two.yaml  square_pass.yaml  triangle_pass.yaml
src/pitchside_tracker/launch/: sideline_world.launch.py
src/pitchside_tracker/pitchside_tracker/: ball_pass_client.py  kick_ball_server.py  simple_ball_follower.py  spawn_ball.py  spawn_players.py  yolo_ball_tracker_node.py
src/pitchside_tracker/worlds/: football_pitch.world
src/pitchside_tracker_interfaces/: package.xml
src/sjtu_drone/: Dockerfile  run_docker.sh
src/sjtu_drone/pitchside_tracker/: package.xml  setup.py
src/sjtu_drone/pitchside_tracker_interfaces/: CMakeLists.txt
src/sjtu_drone/sjtu_drone_bringup/: setup.py
src/sjtu_drone_bringup/launch/: sjtu_drone_bringup.launch.py
src/sjtu_drone_bringup/sjtu_drone_bringup/: spawn_drone.py
src/sjtu_drone_description/urdf/: sjtu_drone.urdf  sjtu_drone.urdf.xacro
src/sjtu_drone_description/worlds/: football_pitch.world
worlds/: football_pitch.world
(+34 files in other folders)
